# rohas

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  publish-crates.sh
.cargo/: config.toml
crates/rohas-adapters/adapter-aws/: Cargo.toml
crates/rohas-adapters/adapter-aws/src/: common.rs  eventbridge.rs  lib.rs  sqs.rs
crates/rohas-adapters/adapter-kafka/: Cargo.toml
crates/rohas-adapters/adapter-kafka/src/: lib.rs
crates/rohas-adapters/adapter-memory/: Cargo.toml
crates/rohas-adapters/adapter-memory/src/: lib.rs
crates/rohas-adapters/adapter-rabbitmq/: Cargo.toml
crates/rohas-adapters/adapter-rabbitmq/src/: lib.rs
crates/rohas-adapters/adapter-rocksdb/: Cargo.toml
crates/rohas-adapters/adapter-rocksdb/src/: lib.rs
crates/rohas-adapters/adapter-sqs/: Cargo.toml
crates/rohas-adapters/adapter-sqs/src/: lib.rs
crates/rohas-cli/: Cargo.toml
crates/rohas-cli/src/: main.rs
crates/rohas-cli/src/commands/: codegen.rs  db.rs  dev.rs  init.rs  list.rs  mod.rs  validate.rs
crates/rohas-cli/src/utils/: file_util.rs
crates/rohas-codegen/: Cargo.toml
crates/rohas-codegen/src/: config.rs  error.rs  generator.rs  lib.rs  python.rs  rust.rs  templates.rs  typescript.rs
crates/rohas-cron/: Cargo.toml
crates/rohas-cron/src/: error.rs  job.rs  lib.rs  scheduler.rs
crates/rohas-dev-server/: Cargo.toml
crates/rohas-dev-server/src/: lib.rs  rust_compiler.rs  ts_compiler.rs
crates/rohas-engine/: Cargo.toml
crates/rohas-engine/src/: adapter.rs  api.rs  config.rs  engine.rs  error.rs  event.rs  lib.rs  router.rs  telemetry.rs  trace.rs  tracing_log.rs  workbench.rs  workbench_auth.rs  ws.rs
crates/rohas-orm/: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
crates/rohas-orm-macros/: Cargo.toml
crates/rohas-orm-macros/src/: lib.rs
crates/rohas-orm/.github/workflows/: publish-pypi.yml
crates/rohas-orm/rohas_orm/: __init__.py  model.py  utils.py
crates/rohas-orm/src/: codegen.rs  connection.rs  error.rs  lib.rs  migration.rs  model.rs  python.rs  query.rs  query_builder.rs
crates/rohas-orm/tests/: migration_sqlite_test.rs
crates/rohas-parser/: Cargo.toml
crates/rohas-parser/src/: ast.rs  error.rs  grammar.rs  lib.rs  parser.rs  relations_example.ro  rohas.pest  tests.rs
crates/rohas-runtime/: Cargo.toml
crates/rohas-runtime/src/: error.rs  executor.rs  handler.rs  lib.rs  node_rpc_runtime.rs  node_runtime.rs  python_runtime.rs  rust_runtime.rs  worker.js
crates/rohas-telemetry/: Cargo.toml
crates/rohas-telemetry/src/: adapter.rs  error.rs  lib.rs  logs.rs  metrics.rs  storage.rs  traces.rs
examples/ecommerce-order-system/: .editorconfig  .gitignore  README.md  pyproject.toml
examples/ecommerce-order-system/config/: rohas.toml
examples/ecommerce-order-system/schema/api/: order_api.ro
examples/ecommerce-order-system/schema/cron/: inventory_sync.ro  order_expiration.ro
examples/ecommerce-order-system/schema/events/: inventory_events.ro  order_events.ro  payment_events.ro
examples/ecommerce-order-system/schema/models/: customer.ro  order.ro  payment.ro  product.ro
examples/ecommerce-order-system/schema/websockets/: order_updates.ro
examples/ecommerce-order-system/src/: README.md
examples/ecommerce-order-system/src/handlers/api/: cancel_order.py  create_order.py  get_order_status.py  list_orders.py
examples/ecommerce-order-system/src/handlers/cron/: expire_pending_orders.py  sync_inventory.py
examples/ecommerce-order-system/src/handlers/events/: cancel_pending_orders.py  complete_order.py  create_shipment.py  handle_payment_failure.py  log_inventory_release.py  log_inventory_reservation.py  payment_completed.py  process_payment.py  refund_payment.py  release_inventory.py  reserve_inventory.py  send_cancellation_notification.py  send_delivery_notification.py  send_expiration_notification.py  send_low_stock_alert.py  send_notifications.py  send_out_of_stock_alert.py  send_payment_confirmation.py  send_payment_failure_notification.py  send_refund_notification.py  send_shipping_notification.py  send_status_notification.py  trigger_reorder.py  update_order_payment_status.py  update_order_status.py  update_tracking.py
examples/ecommerce-order-system/src/handlers/websockets/: on_connect_handler.py  on_disconnect_handler.py  on_message_handler.py
examples/ecommerce-order-system/src/middlewares/: auth.py  rate_limit.py  request_logging.py
examples/rust-example/: .editorconfig  Cargo.toml  Makefile  README.md  dev.sh
examples/rust-example/.rohas/telemetry/: 000230.sst  000233.sst  IDENTITY  LOG  LOG.old.1764676457088041  LOG.old.1764676611820101  LOG.old.1764676860521931  LOG.old.1764676910520412  LOG.old.1764677080703716  LOG.old.1764677478819316  LOG.old.1764747703837471  LOG.old.1764748012701147  LOG.old.1764748350005245  LOG.old.1764748579499426  LOG.old.1764748707992320  LOG.old.1764748748222365  LOG.old.1764748927233275  LOG.old.1764749188444583  LOG.old.1764749507385038  LOG.old.1764750437032942  LOG.old.1764751077272529  LOG.old.1764751253761605  LOG.old.1764751409110204  LOG.old.1764783269901671  LOG.old.1764783307095860  LOG.old.1764783350464989  LOG.old.1764783378776852  LOG.old.1764783407355599  LOG.old.1764783662748977  LOG.old.1764783835234820  LOG.old.1764813469646875  LOG.old.1764813780989918  LOG.old.1764813933645326  LOG.old.1764814180719533  LOG.old.1764814214899970  LOG.old.1764817241576589  LOG.old.1764818976774623  LOG.old.1764858402585030  LOG.old.1764858719987216  LOG.old.1764858763928500  (+17 more)
examples/rust-example/config/: rohas.toml
examples/rust-example/schema/api/: user_api.ro
examples/rust-example/schema/events/: user_events.ro
examples/rust-example/schema/models/: user.ro
examples/rust-example/src/: lib.rs
examples/rust-example/src/handlers/: mod.rs
examples/rust-example/src/handlers/api/: create_user.rs  hello_world.rs  mod.rs
examples/rust-example/src/handlers/events/: mod.rs  send_welcome_email.rs
examples/rust-example/src/handlers/middlewares/: auth.rs  rate_limit.rs
examples/rust-example/src/middlewares/: mod.rs  request_logging.rs
(+116 files in other folders)
