[workspace]
resolver = "2"
members = [
    "crates/rohas-parser",
    "crates/rohas-codegen",
    "crates/rohas-runtime",
    "crates/rohas-engine",
    "crates/rohas-cron",
    "crates/rohas-cli",
    "crates/rohas-dev-server",
    "crates/rohas-telemetry",
    "crates/rohas-orm",
    "crates/rohas-orm-macros",
    "crates/rohas-adapters/adapter-memory",
    "crates/rohas-adapters/adapter-nats",
    "crates/rohas-adapters/adapter-kafka",
    "crates/rohas-adapters/adapter-rabbitmq",
    "crates/rohas-adapters/adapter-aws",
    "crates/rohas-adapters/adapter-rocksdb",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rohas Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rohas-dev/rohas.git"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Logging
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }

# Parsing
nom = "8.0.0"
pest = "2.7"
pest_derive = "2.7"

# Code generation
handlebars = "6.3.2"
tera = "1.19"

# Cron
cron = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }

# HTTP / Web
axum = { version = "0.8.7", features = ["ws"] }
hyper = "1.8.1"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }

# Messaging adapters
async-nats = "0.45.0"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
lapin = "3.7.2"
aws-sdk-sqs = "1.9"
aws-sdk-eventbridge = "1.9"

# Watching / Hot reload
notify = "8.2.0"
notify-debouncer-full = "0.6.0"

# UUID
uuid = { version = "1.19.0", features = ["v4", "serde"] }
base64 = "0.22"

# System information
sysinfo = "0.37.2"

# Testing
mockall = "0.14.0"
proptest = "1.4"

# Internal workspace crates
rohas-parser = { version = "0.1.0", path = "crates/rohas-parser" }
rohas-codegen = { version = "0.1.0", path = "crates/rohas-codegen" }
rohas-runtime = { version = "0.1.0", path = "crates/rohas-runtime" }
rohas-engine = { version = "0.1.0", path = "crates/rohas-engine" }
rohas-cron = { version = "0.1.0", path = "crates/rohas-cron" }
rohas-cli = { version = "0.1.0", path = "crates/rohas-cli" }
rohas-dev-server = { version = "0.1.0", path = "crates/rohas-dev-server" }
rohas-orm = { version = "0.1.0", path = "crates/rohas-orm" }
rohas-orm-macros = { version = "0.1.0", path = "crates/rohas-orm-macros" }
adapter-memory = { version = "0.1.0", path = "crates/rohas-adapters/adapter-memory" }
adapter-nats = { version = "0.1.0", path = "crates/rohas-adapters/adapter-nats" }
adapter-kafka = { version = "0.1.0", path = "crates/rohas-adapters/adapter-kafka" }
adapter-rabbitmq = { version = "0.1.0", path = "crates/rohas-adapters/adapter-rabbitmq" }
adapter-aws = { version = "0.1.0", path = "crates/rohas-adapters/adapter-aws" }
adapter-rocksdb = { version = "0.1.0", path = "crates/rohas-adapters/adapter-rocksdb" }
rohas-telemetry = { version = "0.1.0", path = "crates/rohas-telemetry" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
