[package]
name = "rohas-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[[bin]]
name = "rohas"
path = "src/main.rs"

[dependencies]
rohas-parser = { workspace = true }
rohas-codegen = { workspace = true }
rohas-engine = { workspace = true }
rohas-dev-server = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

