[package]
name = "rohas-codegen"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Code generator for Rohas, creating type-safe interfaces and handler stubs"
repository = { workspace = true }

[dependencies]
rohas-parser = { workspace = true }
rohas-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tera = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

