[package]
name = "rohas-dev-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Development server for Rohas with hot reload and workbench UI"
repository = { workspace = true }

[dependencies]
rohas-parser = { workspace = true }
rohas-engine = { workspace = true }
rohas-codegen = { workspace = true }
rohas-runtime = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
libloading = "0.9.0"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"

