[package]
name = "rohas-engine"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Core engine for Rohas event-driven applications, orchestrating handlers and events"
repository = { workspace = true }

[dependencies]
rohas-parser = { workspace = true }
rohas-runtime = { workspace = true }
rohas-cron = { workspace = true }
rohas-codegen = { workspace = true }
adapter-memory = { workspace = true }
adapter-aws = { workspace = true }
rohas-telemetry = { workspace = true }
adapter-rocksdb = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.9.8"
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
futures-util = "0.3"
regex = "1.11"
base64 = { workspace = true }
async-trait = "0.1"
sysinfo = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

