[package]
name = "rohas-parser"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Parser for Rohas schema files (.ro) defining APIs, events, models, and cron jobs"
repository = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

