[package]
name = "rohas-runtime"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }

# Python integration via pyo3
pyo3 = { version = "0.27.1", features = ["auto-initialize", "abi3-py310"] }

# V8 JavaScript engine
v8 = "142.2.0"
once_cell = "1.21.3"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
 