[package]
name = "rohas-telemetry"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Telemetry library for Rohas providing tracing, metrics, and logging"
repository = { workspace = true }

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"

