[package]
name = "rust-example"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "rust_example"
path = "src/lib.rs"

[dependencies]
rohas-runtime = { version = "*" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
