[package]
name = "adapter-aws"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
tokio = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-sdk-eventbridge = "1.9"
aws-config = "1.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
tracing = { workspace = true }

