[package]
name = "adapter-kafka"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Apache Kafka adapter for Rohas event-driven applications"
repository = { workspace = true }

[dependencies]
tokio = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
tracing = { workspace = true }
