[package]
name = "adapter-memory"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "In-memory event adapter for Rohas, useful for testing and development"
repository = { workspace = true }

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

