[package]
name = "adapter-rabbitmq"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "RabbitMQ messaging adapter for Rohas event-driven applications"
repository = { workspace = true }

[dependencies]
tokio = { workspace = true }
lapin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
tracing = { workspace = true }

