[package]
name = "adapter-rocksdb"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "RocksDB storage adapter for Rohas event-driven applications"
repository = { workspace = true }

[dependencies]
tokio = { workspace = true }
rohas-telemetry = { workspace = true }
rocksdb = "0.24.0"
async-trait = "0.1"
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"

